example-cmmparser/rong/CMMParser.jj
options
{
  static = false;
  LOOKAHEAD=3;
}
 
PARSER_BEGIN(CMMParser)
package rong;
import java.io.FileInputStream;
import java.io.FileOutputStream;
import java.io.InputStream;
import java.util.ArrayList;
import java.util.Scanner;

public class CMMParser
{
    static SymbolTable table = new SymbolTable();
    static int level = 0;
  public static void main(String args[]) throws ParseException {
        try {
            InputStream inputstream = new FileInputStream("test.c");
            CMMParser parser = new CMMParser(inputstream);
            parser.procedure();
        }catch (Exception e){
            System.err.println(e);
        }
    }
}

PARSER_END(CMMParser)

SKIP :
{
  " "
| "\t"
| "\n"
| "\r"
| < "//" (~[ "\n", "\r" ])*
    (
      "\n"
    | "\r"
    | "\r\n"
    ) >
| < "/*" (~[ "*" ])* "*"
    (
      ~[ "/" ] (~[ "*" ])* "*"
    )*
    "/" >
}

TOKEN : /* LITERALS */
{
    //数字
    <#DIGIT:["0"-"9"]>
    //整数
    |<INTEGER_LITERAL:["1"-"9"](<DIGIT>)*>
    //实数
    |<REAL_LITERAL:(<DIGIT>)+
    |(<DIGIT>)+"."
    |(<DIGIT>)+"."(<DIGIT>)+
    |"."(<DIGIT>)+>
    //字符串
    |< STRING : "\"" ((~[ "\"" , "\n", "\\"] )* | (("\\" ("\"" | "\n" | "\\" | "'\n\'"))))* "\"">
}

TOKEN : /* KEYWORDS */
{
    <IF :"if">
    |<ELSE :"else">
    |<WHILE :"while">
    |<FOR :"for">
    |<READ :"read">
    |<WRITE :"write">
    |<INT :"int">
    |<REAL:"real">
    |<VOID:"void">
    |<CHAR:"char">
    |<RETURN:"return">
}

TOKEN : /* OPERATORS */
{
     <PLUS:"+">
    |<MINUS:"-">
    |<MUL:"*">
    |<DIV:"/">
    |<ASSIGN:"=">
    |<LT:"<">
    |<GT:">">
    |<LET:"<=">
    |<GET:">=">
    |<EQ:"==">
    |<NEQ:"<>">
}
TOKEN : /* RELATIONSHIPOPERATOR */
{
	<LPS:"(">
        |<RPS:")">
        |<COMMA:",">
        |<SEMI:";">
        |<LBRACE:"{">
        |<RBRACE:"}">
        |<LBRACKET:"[">
        |<RBRACKET:"]">
        |<SINQS:"'">
        |<DOUQS:"\"">
        |<ADDR:"&">
}

TOKEN : /* IDENTIFIERS */
{
  <IDENTIFIERS:["a"-"z","A"-"Z","_"](["a"-"z","A"-"Z","_","0"-"9"])*>
}


void procedure(): {

 }
{
  (Statement())*
}

void Statement(): { }
{

	    SequenceStatement()				//顺序语句
		| IfStatement()					//条件语句
		| While()						//循环语句
		| For()
		| Read()
		| Write()
		| StatementBlock()
		| DeclareFunction()
		| FunctionCall()
		| AssignStatement()
		| Return()

}
int type():{}
{
    <INT>{return 0;}|<REAL>{return 1;}|<VOID>{return 2;}|<CHAR>{return 3;}
}
//顺序
void SequenceStatement(): { }
{
	(Declare()|AssignStatement()) ";"			//声明和赋值
}
void Declare() : { Token tk; String name;Symbol tmp;int type;Value v;String value;}
{
 (type=type()tk=< IDENTIFIERS>
 {
    name = tk.image;
    tmp = new Symbol(level,name);
    tmp.setType(type);
    table.registerSymbol(tmp);
 }(<ASSIGN>( v=expression(){table.symbolList.get(table.symbolList.size()-1).setValue(v.value);}))? (","
 tk=< IDENTIFIERS >
 {
         name = tk.image;
         tmp = new Symbol(level,name);
         tmp.setType(type);
         table.registerSymbol(tmp);
  }(< ASSIGN> ( v=expression(){table.symbolList.get(table.symbolList.size()-1).setValue(v.value);}))?)* )
}
void AssignStatement(): { Token tk; Symbol tmp; String value;Value v;}
{
	tk=< IDENTIFIERS>
	{
             tmp=table.getSymbol(tk.image);
	}< ASSIGN> v=expression(){tmp.setValue(v.value);}
}

//条件
void IfStatement():{}
{
  	< IF>< LPS>expression()< RPS>Statement()
  	(
        < ELSE > Statement()
      )?
}

void While():{}
{
    <WHILE><LPS>expression()<RPS>Statement()
}

void For():{}
{
    <FOR><LPS>SequenceStatement()expression()";"AssignStatement()<RPS>
    Statement()
}

void Read():{
Token tk;
}
{
    <READ><LPS>tk=<IDENTIFIERS>{
         Symbol tmp = table.getSymbol(tk.image);
         Scanner sc = new Scanner(System.in);
         tmp.setValue(sc.nextLine());
    }<RPS>";"
}

void Write():{Value v;}
{
    <WRITE><LPS>v=expression()<RPS>";"
    {
        System.out.print(v.value);
    }
}

void DeclareFunction():{
    Token tk;FunSymbol tmp;String name;level++;
    Symbol tmp1;int type;
}
{
   type=type()tk=<IDENTIFIERS>
   {
        name = tk.image;
        tmp = new FunSymbol(name);
        tmp.setType(type);
        table.registerFunSymbol(tmp);
   }<LPS>(type=type()tk=<IDENTIFIERS>
   {
       name = tk.image;
       tmp1 = new Symbol(level,name);
       tmp1.setType(type);
       table.registerSymbol(tmp1);
   }(","type=type()tk=<IDENTIFIERS>
   {
       name = tk.image;
       tmp1 = new Symbol(level,name);
       tmp1.setType(type);
       table.registerSymbol(tmp1);
   })*)?<RPS>StatementBlock()
}

void StatementBlock():{
 }
{
    <LBRACE>{level++;}(Statement())*<RBRACE>
    {
         table.deregisterSymbol(level);
         level--;
    }
}

Value expression() :{ Value v1;Value v2=null;Value v = new Value();int type=0;Token tk=null;}
{
	(v1=polynomial()(
	 tk=<EQ>v2=polynomial(){type=1;}
	 |tk=<NEQ>v2=polynomial(){type=2;}
	 |tk=<GT>v2=polynomial(){type=3;}
	 |tk=<GET>v2=polynomial(){type=4;}
	 |tk=<LT>v2=polynomial(){type=5;}
	 |tk=<LET>v2=polynomial(){type=6;}
	)?)
	{
	    if(v2==null) return v1;
	    if(v1.type==3||v2.type==3) throw new ParseException("at Line "+tk.beginLine+": type char cannot be compared");
	    float f1 = Float.valueOf(v1.value);
	    float f2 = Float.valueOf(v2.value);
	    switch(type){
	        case 0:  return v1;
	        case 1: if(f1==f2) {v.value="1"; v.type=0; return v;}  else {v.value="0"; v.type=0; return v;}
	        case 2:if(f1==f2) {v.value="0"; v.type=0; return v;}  else {v.value="1"; v.type=0; return v;}
	        case 3:if(f1>f2) {v.value="1"; v.type=0; return v;}  else {v.value="0"; v.type=0; return v;}
	        case 4:if(f1>=f2) {v.value="1"; v.type=0; return v;}  else {v.value="0"; v.type=0; return v;}
	        case 5:if(f1<f2) {v.value="1"; v.type=0; return v;}  else {v.value="0"; v.type=0; return v;}
	        case 6:if(f1<=f2) {v.value="1"; v.type=0; return v;}  else {v.value="0"; v.type=0; return v;}
	        default:return v1;
	    }
	}
}
Value polynomial(): { Value v1;Value v2=null;Token tk=null;int type=0;Value v = new Value();}
{
	(v1=term()((tk=<PLUS>{type=1;}|tk=<MINUS>{type=2;})v2=polynomial())?)
	{
	    if(v2==null) return v1;
	    if(v1.type!=v2.type && (v1.type==3||v2.type==3)){
	        throw new ParseException("at Line "+tk.beginLine+" The operation cannot be performed with different types.");
	    }
	    if(v1.type==3&&v2.type==3&&type==1){
	        v.type=3;
	        v.value=v1.value+v1.value;
	        return v;
	    }
	    if(v1.type==3&&v2.type==3&&type==2){
	        throw new ParseException("at Line "+tk.beginLine+" This type of operation is not allowed");
	    }
	    if(v1.type==1 || v2.type==1) v.type=1;
	    else if(v1.type==3&&v2.type==3) v.type=3;
	    else v.type=0;
	    float f1 = Float.valueOf(v1.value);
        float f2 = Float.valueOf(v2.value);
        switch(type){
            case 1:float f = f1+f2;v.value=String.valueOf(f);return v;
            case 2:float f0 = f1-f2;v.value=String.valueOf(f0);return v;
            default:return v1;
        }
	}
}
Value term(): {Value v1;Value v2=null;Token tk=null; int type=0;Value v=new Value();}
{
	(v1=factor()((tk=<DIV>{type=1;}|tk=<MUL>{type=2;})v2=term())?)
	{
	    if(v2==null) return v1;
	    if(v1.type!=v2.type && (v1.type==3||v2.type==3)){
            throw new ParseException("at Line "+tk.beginLine+" The operation cannot be performed with different types.");
	    }
	    if(v1.type==3&&v2.type==3){
	        throw new ParseException("at Line "+tk.beginLine+" This type of operation is not allowed");
	    }
	    if(v1.type==1 || v2.type==1) v.type=1;
	    else v.type=0;
	    float f1=Float.valueOf(v1.value);
	    float f2=Float.valueOf(v2.value);
	    switch(type){
	        case 1:if(f2==0)throw new ParseException("The divisor can not be 0.");else {float f=f1/f2;v.value=String.valueOf(f);return v;}
	        case 2:float f0=f1*f2;v.value=String.valueOf(f0);return v;
	        default:return v1;
	    }
	}
}
Value factor() :{Token tk;String name;boolean isFun=false;Value v = new Value(); }
{

	v=constant(){return v;}
	| <LPS>v=expression(){return v;}<RPS>
	| <PLUS>v=term(){return v;}
	| <MINUS>v=term(){v.value="-"+v.value;return v;}
	| tk=<IDENTIFIERS>(<LPS>(expression()(","expression())*)?<RPS>{isFun=true;})?
	{
	    name = tk.image;
            if(isFun){
                FunSymbol tmp = table.getFunSymbol(name);
                v.type=tmp.getType();
                v.value=tmp.getValue();
                return v;
            }else{
                Symbol tmp = table.getSymbol(name);
                v.type=tmp.getType();
                v.value=tmp.getValue();
                return v;
            }
	}
}

Value constant():{Value v = new Value();Token tk;}
{
   ( tk=<INTEGER_LITERAL>{v.type=0;v.value=tk.image;}
    |tk=<REAL_LITERAL>{v.type=1;v.value=tk.image;}
    |tk=<STRING>{v.type=3;v.value=tk.image;})
    {return v;}
}

void FunctionCall():{Token tk;FunSymbol tmp;String name;}
{
    tk=<IDENTIFIERS>
    {
        name=tk.image;
        tmp=new FunSymbol(name);
        table.getFunSymbol(name);
    }<LPS>(expression()(","expression())*)?<RPS>
}

void Return():{}
{
    <RETURN>expression()";"
}
